Fixed websocket handler bugs

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
                                                                every: 10
                                                              });
 
-      $("#map_container").hummingbirdMap(hummingbirdSocket, { from: "hits", filter: "location" });
+      $("#map_container").hummingbirdMap(hummingbirdSocket, { from: "Location", filter: "location" });
 
       new Hummingbird.Logger(window,
                              hummingbirdSocket,
