--- a/public/hummingbird.html
+++ b/public/hummingbird.html
@@ -4,16 +4,17 @@
 
 <head>
   <script src="js/config.js" type="text/javascript"></script>
-  <script src="js/jquery-1.5.1.min.js"></script>
-  <script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
+  <script src="/js/jquery-1.5.1.min.js" type="text/javascript"></script>
 
   <script src="http://localhost:8000/socket.io/socket.io.js"></script>
+  <script>
+    WEB_SOCKET_SWF_LOCATION = 'http://localhost:8000/socket.io/WebSocketMain.swf';
+  </script>
 
   <script src="/js/helpers.js"></script>
 
   <script src="/js/websocket.js"></script>
   <script src="/js/polymaps.js"></script>
-  <script src="js/weekly.js"></script>
 
   <script src="/js/widgets/base.js"></script>
   <script src="/js/widgets/logger.js"></script>
@@ -23,9 +24,8 @@
 
   <title>Hummingbird</title>
 
-  <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
 
-  <link type="text/css" href="css/ui-lightness/jquery-ui-1.8.13.custom.css" rel="stylesheet" />   
   <link rel="stylesheet" media="all" href="/css/main.css" />
   <link rel="stylesheet" media="all" href="/css/map.css" />
   <link rel="stylesheet" media="all" href="/css/weekly.css" />
@@ -35,64 +35,9 @@
 
   <h1>Hummingbird</h1>
 
-  <div id="tabs">
-  <ul>
-    <li><a href="#tabs-dash"> Dashboard</a> </li>
-    <li><a href="#tabs-time"> Time Series</a> </li>
-    <li><a href="#tabs-map"> Map View </a></li>
-   <li><a href="#tabs-aggr">Aggregates</a></li>
-  </ul>
-  <div id="tabs-map">
-  <div id="map_container" style="margin: 40px; width: 800px; height: 450px; position: relative;"></div>
-  </div>
-
-  <div id="tabs-aggr">
-  Lorem Epsum Dolor Sit Amet.
-  </div>
-
-  <div id="tabs-dash">
-	  <div id="days"></div>
-
-	  <div id="day_template" class="day">
-
-	    <div class="all_views_container">
-	      <div class="all_views">0</div>
-	      <p>Page views</p>
-
-	    </div>
-
-
-	    <div class="cart_adds_container">
-	      <div class="cart_adds">0</div>
-	      <p>Cart Adds</p>
-	    </div>
-
-	    <div class="date_title"></div>
-
-	    <div style="clear: both;"></div>
-	  </div>
-
-	  <div id="sale_template" class="day_sale">
-	    <div class="sale_views"></div>
-	    <div class="sale_title"></div>
-	  </div>
-</div>
-  <div id="tabs-time"> 
   <div class="hummingbird_graph" id="total">
 
     <h2 class="graph_title">All Traffic: <span class="value">0</span> Pageviews / Second</h2>
-
-    <div class="axis_left"></div>
-    <div class="graph"></div>
-    <div class="axis_right"></div>
-
-  </div>
-
-  <div style="clear: both;"></div>
-
-  <div class="hummingbird_graph" id="sales">
-
-    <h2 class="graph_title">Sales:</h2>
 
     <div class="axis_left"></div>
     <div class="graph"></div>
@@ -113,17 +58,19 @@
   </div>
 
   <div style="clear: both;"></div>
-  </div>
 
-  </div>
+  <button id="test_it" style="margin-left: 60px;">Send test traffic</button>
+  <button id="test_cart" style="margin-left: 60px;">Send test traffic to cart</button>
+
+  <div style="clear: both;"></div>
+
+  <div id="map_container" style="margin: 40px; width: 800px; height: 450px; position: relative;"></div>
 
   <script>
     $(document).ready(function() {
-      $('#tabs').tabs();
       hummingbirdSocket = new Hummingbird.WebSocket();
       hummingbirdSocket.start();
 
-      Hummingbird.Weekly.init(); 
       $("#total").hummingbirdGraph(hummingbirdSocket,
                                  {
                                    from: "view_totals",
@@ -136,12 +83,6 @@
                                          filter: "cartAdds",
                                          graphHeight: 100
                                        });
-      $("#sales").hummingbirdGraph(hummingbirdSocket,
-                                       {
-                                         from: "Sales",
-                                         filter: { 'sales' : 'product'},
-                                         graphHeight: 80
-                                       });
 
       $("#total h2.graph_title span.value").hummingbirdCount(hummingbirdSocket,
                                                              {
@@ -149,6 +90,8 @@
                                                                filter: "total",
                                                                every: 10
                                                              });
+
+      $("#map_container").hummingbirdMap(hummingbirdSocket, { from: "Location", filter: "location" });
 
       new Hummingbird.Logger(window,
                              hummingbirdSocket,
@@ -158,24 +101,21 @@
                                every: 20
                              });
 
-	$("#tabs").bind('tabsshow', function(event,ui) {
-	   switch(ui.panel.id) {
-	    case "tabs-map":
-	      if (!Hummingbird.maps)
-		 Hummingbird.maps = $("#map_container").hummingbirdMap(hummingbirdSocket, { from: "Location", filter: "location" });
-	      break;
-	    case "tabs-aggr":
-	      break;
-	    case "tabs-dash":
-	      Hummingbird.Weekly.init();
-	      break;
-	   }
-	});
+      $("#test_it").click(function(e) {
+        e.preventDefault();
 
+        var img = document.createElement('img');
+        img.src = siteconfig.track + "/tracking_pixel.gif?f=" + Math.ceil(Math.random() * 1000000)
+      });
+
+      $("#test_cart").click(function(e) {
+        e.preventDefault();
+
+        var img = document.createElement('img');
+        img.src = siteconfig.track + "/tracking_pixel.gif?events=scAdd&f=" + Math.ceil(Math.random() * 1000000)
+      });
     });
   </script>
-
-  
 
 </body>
 </html>
