--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <script src="js/jquery-1.5.1.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
 
+  <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot/excanvas.min.js"></script><![endif]-->
+  <script language="javascript" type="text/javascript" src="js/flot/jquery.flot.js"></script>
+  <script language="javascript" type="text/javascript" src="js/aggregates.js"></script>
+
   <script src="http://localhost:8000/socket.io/socket.io.js"></script>
 
   <script src="/js/helpers.js"></script>
@@ -40,14 +44,23 @@
     <li><a href="#tabs-dash"> Dashboard</a> </li>
     <li><a href="#tabs-time"> Time Series</a> </li>
     <li><a href="#tabs-map"> Map View </a></li>
-   <li><a href="#tabs-aggr">Aggregates</a></li>
+    <li><a href="#tabs-aggr">Aggregates</a></li>
   </ul>
   <div id="tabs-map">
   <div id="map_container" style="margin: 40px; width: 800px; height: 450px; position: relative;"></div>
   </div>
 
   <div id="tabs-aggr">
-  Lorem Epsum Dolor Sit Amet.
+
+  <h1> Last Hour </h1>
+  <div id="hour" style="width:800px;height:300px;"></div>
+
+  <h1> Last Day </h1>
+  <div id="day" style="width:800px;height:300px;"></div>
+
+  <h1> Last Week </h1>
+  <div id="week" style="width:800px;height:300px;"></div>
+
   </div>
 
   <div id="tabs-dash">
