--- a/public/hummingbird.html
+++ b/public/hummingbird.html
@@ -6,9 +6,9 @@
   <script src="js/config.js" type="text/javascript"></script>
   <script src="/js/jquery-1.5.1.min.js" type="text/javascript"></script>
 
-  <script src="http://localhost:8000/socket.io/socket.io.js"></script>
+  <script src="http://t.admedly.com/socket.io/socket.io.js"></script>
   <script>
-    WEB_SOCKET_SWF_LOCATION = 'http://localhost:8000/socket.io/WebSocketMain.swf';
+    WEB_SOCKET_SWF_LOCATION = siteconfig.track + '/socket.io/WebSocketMain.swf';
   </script>
 
   <script src="/js/helpers.js"></script>
