show uniques in dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -68,16 +68,20 @@
 
 	  <div id="day_template" class="day">
 
-	    <div class="all_views_container">
-	      <div class="all_views">0</div>
-	      <p>Page views</p>
-
+	    <div class="all_uniques_container">
+	      <div class="all_uniques">0</div>
+	      <p>Uniques</p>
 	    </div>
-
 
 	    <div class="cart_adds_container">
 	      <div class="cart_adds">0</div>
 	      <p>Cart Adds</p>
+	    </div>
+
+	    <div class="all_views_container">
+	      <div class="all_views">0</div>
+	      <p>Page views</p>
+
 	    </div>
 
 	    <div class="date_title"></div>
