--- a/public/login.html
+++ b/public/login.html
@@ -100,7 +100,7 @@
 <body>
 <div id="login">
   <div class="logo"></div>
-<form method="post" action="http://127.0.0.1:8888/login">
+<form method="post" action="/login">
 	
 		<label>Username:</label>
 			<input type="text" name="username" />
